--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "start server.js"
+    "dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
